--- a/Korduene.Core/Korduene.Core.csproj
+++ b/Korduene.Core/Korduene.Core.csproj
@@ -16,7 +16,9 @@
     <PackageReference Include="AvalonEdit" Version="6.0.1" />
     <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="5.0.0-preview.4.20251.6" />
     <PackageReference Include="Microsoft.Dotnet.Wpf.ProjectTemplates" Version="3.0.0-preview3-27504-2" />
-    <PackageReference Include="NuGet.Build.Tasks" Version="5.7.0-preview.1.6592" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0-preview.3-runtime.20214.6" />
+    <PackageReference Include="Microsoft.NET.HostModel" Version="5.0.0-preview.1.20120.5" />
+    <PackageReference Include="NuGet.Build.Tasks" Version="5.7.0-preview.2.6618" />
   </ItemGroup>
 
   <ItemGroup>
