--- a/Korduene.Core/Korduene.Core.csproj
+++ b/Korduene.Core/Korduene.Core.csproj
@@ -1,46 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>Korduene</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build" Version="16.6.0" />
-    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.6.0" />
-    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.6.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0-4.final" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="3.7.0-4.final" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.7.0-4.final" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.7.0-4.final" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.7.0-4.final" />
-    <PackageReference Include="AvalonEdit" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Build" Version="16.8.0" />
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.8.0" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.8.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0-5.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="3.8.0-5.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.8.0-5.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.8.0-5.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.8.0-5.final" />
+    <PackageReference Include="AvalonEdit" Version="6.1.0-preview1" />
     <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="5.0.0-preview.5.20278.1" />
     <PackageReference Include="Microsoft.Dotnet.Wpf.ProjectTemplates" Version="3.0.0-preview3-27504-2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0-preview.3-runtime.20214.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.HostModel" Version="5.0.0-preview.1.20120.5" />
-    <PackageReference Include="NuGet.Build.Tasks" Version="5.7.0-rtm.6702" />
+    <PackageReference Include="NuGet.Build.Tasks" Version="5.8.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Korduene.Common\Korduene.Common.csproj" />
     <ProjectReference Include="..\Korduene.Graphing.CS\Korduene.Graphing.CS.csproj" />
     <ProjectReference Include="..\Korduene.Graphing\Korduene.Graphing.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
@@ -58,6 +43,10 @@
     <Compile Include="..\_submodules\netsdk\src\Cli\Microsoft.DotNet.Cli.Utils\EnvironmentProvider.cs" Link="DotNetSdk\Microsoft.DotNet.Cli.Utils\EnvironmentProvider.cs" />
     <Compile Include="..\_submodules\netsdk\src\Cli\Microsoft.DotNet.Cli.Utils\IEnvironmentProvider.cs" Link="DotNetSdk\Microsoft.DotNet.Cli.Utils\IEnvironmentProvider.cs" />
     <Compile Include="..\_submodules\netsdk\src\Cli\Microsoft.DotNet.Cli.Utils\Extensions\CollectionsExtensions.cs" Link="DotNetSdk\Microsoft.DotNet.Cli.Utils\Extensions\CollectionsExtensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
